# chain-processor

./: .gitignore  .ignorelist.txt  CHANGELOG.md  DEPLOYMENT.md  Dockerfile.base  README.md  demo_chain_processor.py  docker-compose.yml  register_nodes.py
chain-processor-api/: Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.test.yml  pyproject.toml
chain-processor-api/scripts/: entrypoint.sh  run_tests.sh
chain-processor-api/src/chain_processor_api/: __init__.py  main.py  schemas.py
chain-processor-api/src/chain_processor_api/api/: chains.py  executions.py  nodes.py  router.py  users.py
chain-processor-api/src/chain_processor_api/core/: config.py
chain-processor-api/tests/: conftest.py
chain-processor-api/tests/unit/: test_chains.py  test_health.py  test_users.py
chain-processor-core/: .gitignore  COMPAT.md  Dockerfile  README.md  pyproject.toml
chain-processor-core/docs/: index.md
chain-processor-core/docs/adr/: adr-001-pydantic-for-data-validation.md  index.md  template.md
chain-processor-core/src/chain_processor_core/: __init__.py  __main__.py
chain-processor-core/src/chain_processor_core/exceptions/: __init__.py  errors.py
chain-processor-core/src/chain_processor_core/executor/: __init__.py  chain_executor.py
chain-processor-core/src/chain_processor_core/lib_chains/: __init__.py  base.py  registry.py
chain-processor-core/src/chain_processor_core/models/: __init__.py  base.py  chain.py  execution.py  node.py  user.py
chain-processor-core/src/chain_processor_core/nodes/: __init__.py  text_processing.py
chain-processor-core/src/chain_processor_core/utils/: __init__.py  serialization.py  validation.py
chain-processor-core/tests/: conftest.py
chain-processor-core/tests/unit/: test_chain_node.py  test_execution.py  test_execution_models.py  test_registry.py  test_serialization.py  test_validation.py
chain-processor-db/: .gitignore  Dockerfile.test  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
chain-processor-db/alembic/: env.py
chain-processor-db/alembic/versions/: initial_migration.py
chain-processor-db/docs/adr/: 001_repository_pattern.md
chain-processor-db/docs/schema/: database_schema.md
chain-processor-db/src/chain_processor_db/: __init__.py  base.py  session.py
chain-processor-db/src/chain_processor_db/models/: __init__.py  base.py  chain.py  execution.py  node.py  user.py
chain-processor-db/src/chain_processor_db/repositories/: __init__.py  base.py  chain_repo.py  execution_repo.py  node_repo.py  user_repo.py
chain-processor-db/tests/: conftest.py
chain-processor-db/tests/unit/test_repositories/: test_user_repo.py
docs/: FIX-alpha-v0.0.2.md  FIX.md  postman_collection.json  spec_full-v.1.2.md  spec_outline.md
