[build-system]
requires = ["hatchling>=1.19.0"]
build-backend = "hatchling.build"

[project]
name = "chain-processor-api"
version = "0.1.0"
description = "REST API service for the Chain Processing System"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Chain Processor Team" }]
dependencies = [
    "fastapi>=0.68.0,<0.69.0",
    "pydantic>=1.8.0,<2.0.0",
    "pydantic[email]",
    "uvicorn>=0.15.0,<0.16.0",
    "chain-processor-core",
    "chain-processor-db",
    "argon2-cffi>=21.3.0,<22.0.0",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.5",
    "black>=23.11.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.hatch.build.targets.wheel]
packages = ["src/chain_processor_api"]
